--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 
 <head>
-  <title>My AngularJS App</title>
+  <title>To do list</title>
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">My To Do App</a>
+          <a class="navbar-brand" href="#">To Do List</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -35,12 +35,9 @@
 
     <div class="container">
         <div class="starter-template">
-          <h1>To do list</h1>
           <div ng-view></div>
         </div>
     </div>
-
-
 
 
   <!-- In production use:
@@ -49,7 +46,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="todoList/view1.js"></script>
+  <script src="todoList/todoList.js"></script>
   <script src="todoAdd/view2.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
