--- a/app/todoAdd/view2.html
+++ b/app/todoAdd/view2.html
@@ -1,5 +1,47 @@
-<p>This is the partial for add.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+
+<div>
+  <h3>Add a todo</h3>
+</div>
+
+<form novalidate class="simple-form form-horizontal">
+  <div class="form-group">
+    <label for="name" class="col-sm-2 control-label">name:</label>
+    <div class="col-sm-10">
+      <input type="text" ng-model="todo.name" class="form-control" id="name" placeholder="name">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="description" class="col-sm-2 control-label">description:</label>
+    <div class="col-sm-10">
+      <input type="text" ng-model="todo.description" class="form-control" id="description" placeholder="description">
+    </div>
+  </div>
+
+  <div class="col-sm-offset-2 col-sm-10">
+    <label class="radio-inline">
+      <input type="radio" ng-model="todo.priority" name="inlineRadioOptions" id="inlineRadio1" value="low"> low
+    </label>
+    <label class="radio-inline">
+      <input type="radio" ng-model="todo.priority" name="inlineRadioOptions" id="inlineRadio2" value="high"> high
+    </label>
+  </div>
+    <!-- Name: <input type="text" ng-model="todo.name" /><br />
+    Description: <input type="text" ng-model="todo.description" /><br />
+    <input type="radio" ng-model="todo.priority" value="low" />low
+    <input type="radio" ng-model="todo.priority" value="high" />high<br />
+    <input type="button" ng-click="reset()" value="Reset" />
+    <input type="submit" ng-click="update(todo)" value="Save" /> -->
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-1">
+      <button type="button" ng-click="reset()" class="btn">Reset</button>
+    </div>
+    <div class="col-sm-1">
+      <button type="submit" ng-click="update(todo)" class="btn btn-default">Save</button>
+    </div>
+  </div>
+</form>
+
+<pre>todo = {{todo | json}}</pre>
+<pre>master = {{master | json}}</pre>
