--- a/app/todoList/todoList.html
+++ b/app/todoList/todoList.html
@@ -1,4 +1,6 @@
-<p class="lead">This is the partial for list.</p>
+<div>
+  <p class="lead">Your list of todos</p>
+</div>
 
 <ul>
   <li ng-repeat="item in list()">
